--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Generate <br>Random Password</h1>
+        <h1>Generate <br><span>Random Password</span></h1>
         <div class="display">
             <input type="text" id="password" placeholder="password">
             <img src="images/copy.png" alt="">
         </div>
+        <button onclick="createPassword()"> <img src="images/generate.png">Generate Password</button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
