--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Generate <br><span>Random Password</span></h1>
         <div class="display">
             <input type="text" id="password" placeholder="password">
-            <img src="images/copy.png" alt="">
+            <img src="images/copy.png" onclick="copyPassword()">
         </div>
         <button onclick="createPassword()"> <img src="images/generate.png">Generate Password</button>
     </div>
